Bug 141173 - FILESAVE: DOCX: frames gone after RT
Summary: FILESAVE: DOCX: frames gone after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-03-22 11:56 UTC by Xisco Faulí
Modified: 2021-05-10 16:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.2 master after RT (208.92 KB, image/png)
2021-03-22 11:56 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-03-22 11:56:03 UTC
Created attachment 170625 [details]
Comparison MSO 2010 and LibreOffice 7.2 master after RT

Steps to reproduce:
1. Open attachment 102283 [details] from bug 80924
2. Save it as DOCX
3. Open the new generated document

-> Frames with text are gone. See comparison image

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 5262a9e88037decc26da84e7fa62f2955d4cdb85
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-03-22 11:57:20 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3fd156419654ba5e2f248357a2eed5eeaad04548

author	Justin Luth <justin.luth@collabora.com>	2020-12-10 11:29:53 +0300
committer	Miklos Vajna <vmiklos@collabora.com>	2020-12-11 11:10:27 +0100
commit 3fd156419654ba5e2f248357a2eed5eeaad04548 (patch)
tree cd672ddd5331bd04e976e21c8c481587218e8fc1
parent a4eec60c388cc65ae0b4c8ea0fd7235f520a749d (diff)
tdf#136929 docx export: keep frame with paragraph

Bisected with: bibisect-linux64-7.2

Adding Cc: to Justin Luth
Comment 2 Justin L 2021-03-23 13:30:44 UTC
It is failing based on the added situation of Synerzip's bug 75604, which has a unit test in ooxmlexport7. Reverting their changes fixes the problem, and their unit test (and MS Word 2016) still passes.

Proposed fix at https://gerrit.libreoffice.org/c/core/+/112994

Proposed to simply revert the backport to 7.1 as the safest way forward. https://gerrit.libreoffice.org/c/core/+/112986
Comment 3 Commit Notification 2021-03-24 12:39:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/34e80d904054a0752e43a84aabe6d705fd437030

tdf#141173 docx export: revert fdo#75604: File Corruption

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2021-05-10 16:01:29 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: d4f116d9576453f5974eb63db37a33c59ac53bc9
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Justin, thanks for fixing this issue!!