sw/source/filter/ww8/docxattributeoutput.cxx
@@ -6192,10 +6192,7 @@ void DocxAttributeOutput::WriteOutliner(const OutlinerParaObject& rParaObj)
             aAttrIter.NextPos();
         }
         while( nCurrentPos < nEnd );
-        // Word can't handle nested text boxes, so write them on the same level.
-        ++m_nTextFrameLevel;
         EndParagraph(ww8::WW8TableNodeInfoInner::Pointer_t());
-        --m_nTextFrameLevel;
     }
     m_pSerializer->endElementNS( XML_w, XML_txbxContent );
 }
